# hegel

./: .gitignore  README.md  docker-compose.yml  setup.md
backend/: requirements.txt
backend/api/: app.py  main.py
backend/api/models/: database.py  schemas.py  user.py
backend/api/routes/: auth.py  diadochi.py  evidence.py  fuzzy_evidence.py  molecules.py  pipeline.py  rectification.py  visualization.py
backend/api/services/: auth.py  data_sources.py  molecule_network.py  visualization.py
backend/diadochi/: README.md  SUMMARY.md  __init__.py  orchestrator.py  pipeline.py
backend/diadochi/core/: chains.py  mixers.py  models.py  (+2 more)
core/: Cargo.toml  Dockerfile
core/src/: lib.rs  main.rs
core/src/fuzzy_evidence/: mod.rs
core/src/graph/: mod.rs  neo4j.rs  schema.rs
core/src/metacognition/: decision.rs  llm.rs  memory.rs  mod.rs  molecule_processor.rs
core/src/processing/: evidence.rs  fuzzy_integration.rs  genomics.rs  mass_spec.rs  mod.rs  neo4j.rs  rectifier.rs  schema.rs  spectral.rs
docker/: docker-compose.prod.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/llm-service/: Dockerfile
docker/nginx/: nginx.conf
docs/: _config.yml  api-docs.html  bloodhound.md  gospel.md  implementation_tracking.md  index.html  nicotine-module.md  scientific-background.html  script.js  styles.css
frontend/: Dockerfile
frontend/pages/: _app.js  index.js  molecules.js
frontend/styles/: evidence-rectifier.css  genome.css  molecular-data.css  molecules.css  pathway.css  spectra.css
llm-service/: requirements.txt  server.py
scripts/: deploy.sh  dev.sh  setup.sh  stop.sh
scripts/hooks/: pre-commit
(+33 files in other folders)
