[package]
name = "hegel-core"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye"]
description = "Core computational engine for the Hegel molecular identity platform"

[lib]
name = "hegel"
path = "src/lib.rs"

[[bin]]
name = "hegel-cli"
path = "src/main.rs"

[[bin]]
name = "hegel-api"
path = "src/bin/api.rs"

[dependencies]
# Molecular processing
rdkit = { version = "0.1.0" }
chemcore = { version = "0.2" }
nalgebra = "0.32.3"
openff-toolkit = "0.1.0"

# Graph processing
petgraph = "0.6.4"
ndarray = "0.15.6"

# Parallel processing
rayon = "1.8.0"
crossbeam = "0.8.2"

# Error handling and utilities
anyhow = "1.0.75"
thiserror = "1.0.50"
log = { version = "0.4.20", features = ["std", "serde"] }
env_logger = "0.10.0"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"

# Serialization/deserialization
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

# Web server for API
actix-web = "4.4.0"
actix-cors = "0.6.4"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"

# Database connectivity
neo4j = "5.1.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite"] }

# FFI for Python integration
pyo3 = { version = "0.19.2", features = ["extension-module"] }

# For LLM integration
reqwest = { version = "0.11.22", features = ["json"] }
async-trait = "0.1.74"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"
mockall = "0.11.4"

[[bench]]
name = "molecule_benchmarks"
harness = false
